--- a/package.json
+++ b/package.json
@@ -10,14 +10,41 @@
     "Other"
   ],
   "activationEvents": [
-    "onCommand:htw-sonarqube-connector-plugin.helloWorld"
+    "onCommand:htw-sonarqube-connector-plugin.helloWorld",
+    "onCommand:htw-sonarqube-connector-plugin.setImmaNr",
+    "onCommand:htw-sonarqube-connector-plugin.setQualityProfile",
+    "onCommand:htw-sonarqube-connector-plugin.initializeProjects",
+    "onCommand:htw-sonarqube-connector-plugin.runAnalysis"
   ],
   "main": "./extension.js",
   "contributes": {
-    "commands": [{
-      "command": "htw-sonarqube-connector-plugin.helloWorld",
-      "title": "Hello World"
-    }]
+    "commands": [
+      {
+        "command": "htw-sonarqube-connector-plugin.setSonarToken",
+        "category": "HTW",
+        "title": "SonarQube Token eingeben"
+      },
+      {
+        "command": "htw-sonarqube-connector-plugin.setImmaNr",
+        "category": "HTW",
+        "title": "Matrikelnummer eingeben"
+      },
+      {
+        "command": "htw-sonarqube-connector-plugin.setQualityProfile",
+        "category": "HTW",
+        "title": "Setze QualityProfile für Projekt"
+      },
+      {
+        "command": "htw-sonarqube-connector-plugin.initializeProjects",
+        "category": "HTW",
+        "title": "Erstelle Projekte in SonarQube"
+      },
+      {
+        "command": "htw-sonarqube-connector-plugin.runAnalysis",
+        "category": "HTW",
+        "title": "Analyse durchführen"
+      }
+    ]
   },
   "scripts": {
     "lint": "eslint .",
@@ -25,14 +52,17 @@
     "test": "node ./test/runTest.js"
   },
   "devDependencies": {
-    "@types/vscode": "^1.76.0",
     "@types/glob": "^8.0.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "16.x",
+    "@types/vscode": "^1.76.0",
+    "@vscode/test-electron": "^2.2.0",
     "eslint": "^8.28.0",
     "glob": "^8.0.3",
     "mocha": "^10.1.0",
-    "typescript": "^4.9.3",
-    "@vscode/test-electron": "^2.2.0"
+    "typescript": "^4.9.3"
+  },
+  "dependencies": {
+    "axios": "^1.3.4"
   }
 }
